--- a/base/html/common/monitering_left.html
+++ b/base/html/common/monitering_left.html
@@ -1,32 +1,122 @@
-<div class="video-item active">
-  <!-- <video autoplay playsinline controls muted width="100%" height="100%">
-    <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4">
-  </video> -->
-  <img src="/base/images/temp/@2200x1816.jpg" alt="퍼블 확인용 더미이미지" style="position:absolute;left:0;top:0;width:100%;height:100%;">
-  <canvas class="canvas"></canvas>
-</div>
-<!-- //video-item -->
-<div class="video-item off"> <!-- 210909 카메라 화면이 꺼져있는 경우 off 클래스 추가 -->
-  <!-- <video autoplay playsinline controls muted width="100%" height="100%">
-    <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4">
-  </video> -->
-  <img src="/base/images/temp/@2200x1816.jpg" alt="퍼블 확인용 더미이미지" style="position:absolute;left:0;top:0;width:100%;height:100%;">
-  <canvas class="canvas"></canvas>
-</div>
-<!-- //video-item -->
-<div class="video-item off2"> <!-- 211011 case2 : 카메라 화면이 꺼져있는 경우 off2 클래스 추가 -->
-  <!-- <video autoplay playsinline controls muted width="100%" height="100%">
-    <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4">
-  </video> -->
-  <img src="/base/images/temp/@2200x1816.jpg" alt="퍼블 확인용 더미이미지" style="position:absolute;left:0;top:0;width:100%;height:100%;">
-  <canvas class="canvas"></canvas>
-</div>
-<!-- //video-item -->
-<div class="video-item">
-  <!-- <video autoplay playsinline controls muted width="100%" height="100%">
-    <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4">
-  </video> -->
-  <img src="/base/images/temp/@2200x1816.jpg" alt="퍼블 확인용 더미이미지" style="position:absolute;left:0;top:0;width:100%;height:100%;">
-  <canvas class="canvas"></canvas>
-</div>
-<!-- //video-item -->
+<h2>장비설정</h2>
+<ul class="ly-left-list">
+  <li>
+    <label class="chkbox-default">
+      <input type="checkbox" class="hidden">
+      <span class="txt"><em class="hidden">체크박스</em></span>
+    </label>
+    <button type="button">도담고등학교</button>
+  </li>
+  <li>
+    <label class="chkbox-default">
+      <input type="checkbox" class="hidden">
+      <span class="txt"><em class="hidden">체크박스</em></span>
+    </label>
+    <button type="button">도담중학교</button>
+  </li>
+  <li>
+    <label class="chkbox-default">
+      <input type="checkbox" class="hidden">
+      <span class="txt"><em class="hidden">체크박스</em></span>
+    </label>
+    <button type="button">오산방면</button>
+  </li>
+  <li>
+    <label class="chkbox-default">
+      <input type="checkbox" class="hidden">
+      <span class="txt"><em class="hidden">체크박스</em></span>
+    </label>
+    <button type="button">절재로방면</button>
+  </li>
+  <li>
+    <label class="chkbox-default">
+      <input type="checkbox" class="hidden">
+      <span class="txt"><em class="hidden">체크박스</em></span>
+    </label>
+    <button type="button">국립세종도서관</button>
+  </li>
+  <li>
+    <label class="chkbox-default">
+      <input type="checkbox" class="hidden">
+      <span class="txt"><em class="hidden">체크박스</em></span>
+    </label>
+    <button type="button">절재로방면</button>
+  </li>
+  <li>
+    <label class="chkbox-default">
+      <input type="checkbox" class="hidden">
+      <span class="txt"><em class="hidden">체크박스</em></span>
+    </label>
+    <button type="button">국립세종도서관</button>
+  </li>
+  <li>
+    <label class="chkbox-default">
+      <input type="checkbox" class="hidden">
+      <span class="txt"><em class="hidden">체크박스</em></span>
+    </label>
+    <button type="button">절재로방면</button>
+  </li>
+  <li>
+    <label class="chkbox-default">
+      <input type="checkbox" class="hidden">
+      <span class="txt"><em class="hidden">체크박스</em></span>
+    </label>
+    <button type="button">국립세종도서관</button>
+  </li>
+  <li>
+    <label class="chkbox-default">
+      <input type="checkbox" class="hidden">
+      <span class="txt"><em class="hidden">체크박스</em></span>
+    </label>
+    <button type="button">절재로방면</button>
+  </li>
+  <li>
+    <label class="chkbox-default">
+      <input type="checkbox" class="hidden">
+      <span class="txt"><em class="hidden">체크박스</em></span>
+    </label>
+    <button type="button">국립세종도서관</button>
+  </li>
+  <li>
+    <label class="chkbox-default">
+      <input type="checkbox" class="hidden">
+      <span class="txt"><em class="hidden">체크박스</em></span>
+    </label>
+    <button type="button">절재로방면</button>
+  </li>
+  <li>
+    <label class="chkbox-default">
+      <input type="checkbox" class="hidden">
+      <span class="txt"><em class="hidden">체크박스</em></span>
+    </label>
+    <button type="button">국립세종도서관</button>
+  </li>
+  <li>
+    <label class="chkbox-default">
+      <input type="checkbox" class="hidden">
+      <span class="txt"><em class="hidden">체크박스</em></span>
+    </label>
+    <button type="button">절재로방면</button>
+  </li>
+  <li>
+    <label class="chkbox-default">
+      <input type="checkbox" class="hidden">
+      <span class="txt"><em class="hidden">체크박스</em></span>
+    </label>
+    <button type="button">국립세종도서관</button>
+  </li>
+  <li>
+    <label class="chkbox-default">
+      <input type="checkbox" class="hidden">
+      <span class="txt"><em class="hidden">체크박스</em></span>
+    </label>
+    <button type="button">절재로방면</button>
+  </li>
+  <li>
+    <label class="chkbox-default">
+      <input type="checkbox" class="hidden">
+      <span class="txt"><em class="hidden">체크박스</em></span>
+    </label>
+    <button type="button">국립세종도서관</button>
+  </li>
+</ul>
