1.수정사항 작업 2.차로 설정 탭 부분 작업 3.로그인 화면, 에러화면, 모달 팝업 작업

--- a/base/html/common/header.html
+++ b/base/html/common/header.html
@@ -1,6 +1,7 @@
 <div class="header-group">
   <div class="ly-left">
-    <h1 class="logo"><span class="hidden">BYDA</span></h1>
+    <!-- 납품시 로고는 아래 style속성의 background-image url를 수정하면 됩니다. -->
+    <h1 class="logo" style="background-image:url(/base/images/logo.png);"><span class="hidden">BYDA</span></h1>
     <ul class="gnb">
       <li class="setup">
         <a href="#">장비 설정</a>
