--- a/base/html/common/monitering_left.html
+++ b/base/html/common/monitering_left.html
@@ -1,122 +1,60 @@
 <h2>장비설정</h2>
 <ul class="ly-left-list">
   <li>
-    <label class="chkbox-default">
-      <input type="checkbox" class="hidden">
-      <span class="txt"><em class="hidden">체크박스</em></span>
-    </label>
     <button type="button">도담고등학교</button>
   </li>
   <li>
-    <label class="chkbox-default">
-      <input type="checkbox" class="hidden">
-      <span class="txt"><em class="hidden">체크박스</em></span>
-    </label>
-    <button type="button">도담중학교</button>
+    <button type="button" class="active">도담중학교</button> <!-- 클릭시 active 클래스 추가 -->
   </li>
   <li>
-    <label class="chkbox-default">
-      <input type="checkbox" class="hidden">
-      <span class="txt"><em class="hidden">체크박스</em></span>
-    </label>
     <button type="button">오산방면</button>
   </li>
   <li>
-    <label class="chkbox-default">
-      <input type="checkbox" class="hidden">
-      <span class="txt"><em class="hidden">체크박스</em></span>
-    </label>
     <button type="button">절재로방면</button>
   </li>
   <li>
-    <label class="chkbox-default">
-      <input type="checkbox" class="hidden">
-      <span class="txt"><em class="hidden">체크박스</em></span>
-    </label>
     <button type="button">국립세종도서관</button>
   </li>
   <li>
-    <label class="chkbox-default">
-      <input type="checkbox" class="hidden">
-      <span class="txt"><em class="hidden">체크박스</em></span>
-    </label>
     <button type="button">절재로방면</button>
   </li>
   <li>
-    <label class="chkbox-default">
-      <input type="checkbox" class="hidden">
-      <span class="txt"><em class="hidden">체크박스</em></span>
-    </label>
     <button type="button">국립세종도서관</button>
   </li>
   <li>
-    <label class="chkbox-default">
-      <input type="checkbox" class="hidden">
-      <span class="txt"><em class="hidden">체크박스</em></span>
-    </label>
     <button type="button">절재로방면</button>
   </li>
   <li>
-    <label class="chkbox-default">
-      <input type="checkbox" class="hidden">
-      <span class="txt"><em class="hidden">체크박스</em></span>
-    </label>
     <button type="button">국립세종도서관</button>
   </li>
   <li>
-    <label class="chkbox-default">
-      <input type="checkbox" class="hidden">
-      <span class="txt"><em class="hidden">체크박스</em></span>
-    </label>
     <button type="button">절재로방면</button>
   </li>
   <li>
-    <label class="chkbox-default">
-      <input type="checkbox" class="hidden">
-      <span class="txt"><em class="hidden">체크박스</em></span>
-    </label>
     <button type="button">국립세종도서관</button>
   </li>
   <li>
-    <label class="chkbox-default">
-      <input type="checkbox" class="hidden">
-      <span class="txt"><em class="hidden">체크박스</em></span>
-    </label>
     <button type="button">절재로방면</button>
   </li>
   <li>
-    <label class="chkbox-default">
-      <input type="checkbox" class="hidden">
-      <span class="txt"><em class="hidden">체크박스</em></span>
-    </label>
     <button type="button">국립세종도서관</button>
   </li>
   <li>
-    <label class="chkbox-default">
-      <input type="checkbox" class="hidden">
-      <span class="txt"><em class="hidden">체크박스</em></span>
-    </label>
     <button type="button">절재로방면</button>
   </li>
   <li>
-    <label class="chkbox-default">
-      <input type="checkbox" class="hidden">
-      <span class="txt"><em class="hidden">체크박스</em></span>
-    </label>
     <button type="button">국립세종도서관</button>
   </li>
   <li>
-    <label class="chkbox-default">
-      <input type="checkbox" class="hidden">
-      <span class="txt"><em class="hidden">체크박스</em></span>
-    </label>
     <button type="button">절재로방면</button>
   </li>
   <li>
-    <label class="chkbox-default">
-      <input type="checkbox" class="hidden">
-      <span class="txt"><em class="hidden">체크박스</em></span>
-    </label>
+    <button type="button">국립세종도서관</button>
+  </li>
+  <li>
+    <button type="button">절재로방면</button>
+  </li>
+  <li>
     <button type="button">국립세종도서관</button>
   </li>
 </ul>
