--- a/base/html/monitering_roi.html
+++ b/base/html/monitering_roi.html
@@ -47,10 +47,10 @@
           <div class="control-content">
             <div class="tab-group">
               <div class="tab-nav">
-                <a href="monitering_roi.html" class="active">인식영역 설정</a>
-                <a href="monitering_roi2.html">이벤트 설정</a>
-                <a href="monitering_roi3.html">차로 설정</a>
-                <a href="monitering_roi4.html">횡단보도 설정</a>
+                <a href="monitering_roi.html" class="active">인식영역</a>
+                <a href="monitering_roi2.html">이벤트</a>
+                <a href="monitering_roi3.html">차로</a>
+                <a href="monitering_roi4.html">횡단보도</a>
               </div>
               <!-- //tab-nav -->
               <div class="tab-container">
