--- a/base/html/monitering_roi2.html
+++ b/base/html/monitering_roi2.html
@@ -47,10 +47,10 @@
           <div class="control-content">
             <div class="tab-group">
               <div class="tab-nav">
-                <a href="monitering_roi.html">인식영역 설정</a>
-                <a href="monitering_roi2.html" class="active">이벤트 설정</a>
-                <a href="monitering_roi3.html">차로 설정</a>
-                <a href="monitering_roi4.html">횡단보도 설정</a>
+                <a href="monitering_roi.html">인식영역</a>
+                <a href="monitering_roi2.html" class="active">이벤트</a>
+                <a href="monitering_roi3.html">차로</a>
+                <a href="monitering_roi4.html">횡단보도</a>
               </div>
               <!-- //tab-nav -->
               <div class="tab-container">
@@ -72,7 +72,7 @@
                         </label>
                         <label class="radio-bordered">
                           <input type="radio" name="scope" class="hidden">
-                          <span class="txt">차량 방향</span>
+                          <span class="txt">차량방향</span>
                         </label>
                       </div>
                       <!-- //radio-inline-group -->
