카메라 관리 화면의 '지점 도로 정보/목록' 항목 추가

--- a/base/html/camera_manage.html
+++ b/base/html/camera_manage.html
@@ -87,102 +87,160 @@
           <!-- //ly-left -->
           
           <div class="ly-right">
-            <div class="tbl-list-header type2">
-              <h2>상세 정보</h2>
-              <div class="btn-inline-group">
-                <button type="button" class="btn-default bg-blue2">저장</button>
+            <div class="bind1"> <!-- 220912 bind1 div 추가 -->
+              <div class="tbl-list-header type2">
+                <h2>상세 정보</h2>
+                <div class="btn-inline-group">
+                  <button type="button" class="btn-default bg-blue2">저장</button>
+                </div>
+              </div>
+              <!-- //tbl-list-header -->
+
+              <div class="tbl-border-none">
+                <table>
+                  <colgroup>
+                    <col style="width:25%;">
+                    <col style="width:75%;">
+                  </colgroup>
+                  <tbody>
+                    <tr>
+                      <th>구역</th>
+                      <td>
+                        <select class="selectbox bordered" disabled style="width:100%;"> <!-- 셀렉트박스 비활성화: disabled 속성 추가 -->
+                          <option>1</option>
+                        </select>
+                      </td>
+                    </tr>
+                    <tr>
+                      <th>지점</th>
+                      <td>
+                        <select class="selectbox bordered" style="width:100%;">
+                          <option>1</option>
+                        </select>
+                      </td>
+                    </tr>
+                    <tr>
+                      <th>카메라 ID</th>
+                      <td><input type="text" class="input-txt type2"></td>
+                    </tr>
+                    <tr>
+                      <th>카메라 명</th>
+                      <td><input type="text" class="input-txt type2"></td>
+                    </tr>
+                    <tr>
+                      <th>카메라 방향</th>
+                      <td>
+                        <select class="selectbox bordered" style="width:100%;">
+                          <option>동</option>
+                        </select>
+                      </td>
+                    </tr>
+                    <tr>
+                      <th>RTSP 주소</th>
+                      <td><input type="text" class="input-txt type2"></td>
+                    </tr>
+                    <tr>
+                      <th>화면 해상도</th>
+                      <td>
+                        <span class="input-value-group">
+                          <input type="text" class="input-txt type2">
+                          <i>X</i>
+                          <input type="text" class="input-txt type2">
+                        </span>
+                      </td>
+                    </tr>
+                    <tr>
+                      <th>각도</th>
+                      <td><input type="text" class="input-txt type2"></td>
+                    </tr>
+                    <tr>
+                      <th>위도</th>
+                      <td><input type="text" class="input-txt type2"></td>
+                    </tr>
+                    <tr>
+                      <th>경도</th>
+                      <td><input type="text" class="input-txt type2"></td>
+                    </tr>
+                    <tr>
+                      <th>사용여부</th>
+                      <td>
+                        <label class="radio-default">
+                          <input type="radio" name="use" class="hidden">
+                          <span class="txt">사용</span>
+                        </label>
+                        <label class="radio-default ml15">
+                          <input type="radio" name="use" class="hidden">
+                          <span class="txt">미사용</span>
+                        </label>
+                      </td>
+                    </tr>
+                    <tr>
+                      <th>수정 일시</th>
+                      <td>2021-11-01 10:35:01</td>
+                    </tr>
+                  </tbody>
+                </table>
+                <!-- <button type="button" class="btn-block c-skyblue lg">카메라 Reset</button> -->
+              </div>
+              <!-- //tbl-border-none -->
+            </div>
+            <!-- //bind1 -->
+
+            <!-- 220912 지점 도로 정보/목록 항목 추가 -->
+            <div class="bind2">
+              <div class="tbl-list-header type2">
+                <h2>지점 도로 정보</h2>
+                <div class="btn-inline-group">
+                  <button type="button" class="btn-default bg-blue2">추가</button>
+                </div>
+              </div>
+              <!-- //tbl-list-header -->
+              <div class="flexbox">
+                <select class="selectbox bordered" style="width:150px;">
+                  <option>태릉</option>
+                </select>
+                <select class="selectbox bordered" style="width:150px;">
+                  <option>동</option>
+                </select>
+                <span>방향명 : 태릉입구역</span>
               </div>
             </div>
-            <!-- //tbl-list-header -->
+            <!-- //bind2 -->
 
-            <div class="tbl-border-none">
-              <table>
+            <div class="bind3">
+              <div class="tbl-list-header type2">
+                <h2>지점 도로 목록</h2>
+              </div>
+              <!-- //tbl-list-header -->
+              <table class="tbl-bordered">
                 <colgroup>
-                  <col style="width:25%;">
-                  <col style="width:75%;">
+                  <col style="width:15%;">
+                  <col style="width:30%;">
+                  <col style="width:10%;">
+                  <col style="width:35%;">
+                  <col style="width:10%;">
                 </colgroup>
+                <thead>
+                  <tr>
+                    <th>도로ID</th>
+                    <th>도로 명</th>
+                    <th>방향</th>
+                    <th>방향 명</th>
+                    <th>삭제</th>
+                  </tr>
+                </thead>
                 <tbody>
                   <tr>
-                    <th>구역</th>
-                    <td>
-                      <select class="selectbox bordered" disabled style="width:100%;"> <!-- 셀렉트박스 비활성화: disabled 속성 추가 -->
-                        <option>1</option>
-                      </select>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th>지점</th>
-                    <td>
-                      <select class="selectbox bordered" style="width:100%;">
-                        <option>1</option>
-                      </select>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th>카메라 ID</th>
-                    <td><input type="text" class="input-txt type2"></td>
-                  </tr>
-                  <tr>
-                    <th>카메라 명</th>
-                    <td><input type="text" class="input-txt type2"></td>
-                  </tr>
-                  <tr>
-                    <th>카메라 방향</th>
-                    <td>
-                      <select class="selectbox bordered" style="width:100%;">
-                        <option>동</option>
-                      </select>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th>RTSP 주소</th>
-                    <td><input type="text" class="input-txt type2"></td>
-                  </tr>
-                  <tr>
-                    <th>화면 해상도</th>
-                    <td>
-                      <span class="input-value-group">
-                        <input type="text" class="input-txt type2">
-                        <i>X</i>
-                        <input type="text" class="input-txt type2">
-                      </span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th>각도</th>
-                    <td><input type="text" class="input-txt type2"></td>
-                  </tr>
-                  <tr>
-                    <th>위도</th>
-                    <td><input type="text" class="input-txt type2"></td>
-                  </tr>
-                  <tr>
-                    <th>경도</th>
-                    <td><input type="text" class="input-txt type2"></td>
-                  </tr>
-                  <tr>
-                    <th>사용여부</th>
-                    <td>
-                      <label class="radio-default">
-                        <input type="radio" name="use" class="hidden">
-                        <span class="txt">사용</span>
-                      </label>
-                      <label class="radio-default ml15">
-                        <input type="radio" name="use" class="hidden">
-                        <span class="txt">미사용</span>
-                      </label>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th>수정 일시</th>
-                    <td>2021-11-01 10:35:01</td>
+                    <td>1</td>
+                    <td>태릉2</td>
+                    <td>동</td>
+                    <td>태릉입구역1</td>
+                    <td><button type="button" class="btn-delete"><span class="hidden">삭제</span></button></td>
                   </tr>
                 </tbody>
               </table>
-
-              <!-- <button type="button" class="btn-block c-skyblue lg">카메라 Reset</button> -->
             </div>
-            <!-- //tbl-border-none -->
+            <!-- //bind3 -->
           </div>
           <!-- //ly-right -->
         </div>
