ROI설정 > 횡단보도 탭에 사용/방향/길이에 대한 오른쪽에 추가 버튼 추가

--- a/base/html/monitering_roi4.html
+++ b/base/html/monitering_roi4.html
@@ -96,10 +96,11 @@
                     <div class="tbl-border-none short">
                       <table>
                         <colgroup>
-                          <col style="width:15%;">
-                          <col style="width:35%;">
-                          <col style="width:15%;">
-                          <col style="width:35%;">
+                          <col style="width:14%;">
+                          <col style="width:30%;">
+                          <col style="width:14%;">
+                          <col style="width:22%;">
+                          <col style="width:20%;">
                         </colgroup>
                         <tbody>
                           <tr>
@@ -120,6 +121,7 @@
                                 <span class="txt">미사용</span>
                               </label> -->
                             </td>
+                            <td rowspan="2"><button type="button" class="btn-block c-skyblue">추가</button></td>
                           </tr>
                           <tr>
                             <th>방향</th>
